<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/purple_500">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="295dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/foto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/biodataku"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="160dp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:text="@string/nama"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="80dp"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:text="@string/alamat"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:text="@string/npm"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:text="@string/kelas"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

</LinearLayout>
