<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/purple_500"
    android:padding="24dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="214dp"
        android:src="@drawable/latar"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/judul_buah"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="29sp"
        android:layout_marginBottom="32dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/btn_buka_durian"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/musangking"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_mangga"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/manggaberazil"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_anggur"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/hijau"
            android:scaleType="fitCenter"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_gambar"
        android:textStyle="italic"
        android:layout_marginBottom="32dp"
        />
    <Button
        android:id="@+id/btn_profil"
        android:text="@string/biodata"
        android:onClick="bukaBiodata"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
</LinearLayout>